// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reload complete() should do. 1`] = `
Array [
  Object {
    "payload": Object {
      "overtime": "monthlyOvertime",
      "workSystem": "legalAgreementWorkSystem",
    },
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/REQUESTS/MONTHLY-REQUEST/SETOVERTIME",
  },
  Object {
    "payload": Object {
      "overtime": "yearlyOvertime",
      "workSystem": "legalAgreementWorkSystem",
    },
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/REQUESTS/YEARLY-REQUEST/SETOVERTIME",
  },
]
`;

exports[`reload error() should do. 1`] = `
Array [
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/REQUESTS/MONTHLY-REQUEST/CLEAR",
  },
  Object {
    "type": "TIMESHEET-PC/UI/LEGAL-AGREEMENT-REQUEST/REQUESTS/YEARLY-REQUEST/CLEAR",
  },
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`reload finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`reload start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
